--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "20"
-      - run: npm install
+          cache: "npm"     # 依 package-lock.json 啟用快取
+      - run: npm ci
       - run: npm test --if-present
 
   deploy:
@@ -32,7 +33,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "20"
-      - run: npm install
+          cache: "npm"
+      - run: npm ci
 
       - name: Prepare CLASP auth (Service Account)
         run: |
