--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
 name: AA01 CI
 
 on:
-  pull_request:
-    branches: [ main ]
   push:
+    branches: [ main ]
+  pull_request:
     branches: [ main ]
 
 permissions:
@@ -28,6 +28,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - id: auth
+        uses: google-github-actions/auth@v2
+        with:
+          workload_identity_provider: ${{ secrets.GCP_WIF_PROVIDER }}
+          service_account: ${{ secrets.GCP_SA_EMAIL }}
+          lifetime: 3600
+
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
@@ -36,24 +44,13 @@ jobs:
 
       - name: Write .clasp.json
         run: |
-          cat > .clasp.json <<'CLASP'
-          {
-            "scriptId": "${{ secrets.SCRIPT_ID }}",
-            "rootDir": "."
-          }
-          CLASP
+          cat > .clasp.json <<'JSON'
+          { "scriptId": "${{ secrets.SCRIPT_ID }}", "rootDir": "." }
+          JSON
+          echo "[debug] .clasp.json:" && cat .clasp.json
 
-      - name: Write raw SA JSON
-        run: echo '${{ secrets.GCP_SA_KEY }}' > sa.json
-
-      - name: Login clasp with Service Account
-        run: npx @google/clasp login --creds sa.json --no-localhost
-
-      - name: Who am I
-        run: npx @google/clasp whoami
-
-      - name: Push & Deploy
+      - name: Push & Deploy via ADC
         run: |
-          npx @google/clasp push --force
-          npx @google/clasp version "CI $(date -u +'%Y-%m-%dT%H:%M:%SZ')"
-          npx @google/clasp deploy -d "CI auto deploy $(date -u +'%Y-%m-%dT%H:%M:%SZ')"
+          npx -y @google/clasp@^3 push --adc --force
+          npx -y @google/clasp@^3 version --adc "CI $(date -u +'%Y-%m-%dT%H:%M:%SZ')"
+          npx -y @google/clasp@^3 deploy --adc -d "CI auto deploy $(date -u +'%Y-%m-%dT%H:%M:%SZ')"
