--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,23 +8,19 @@ on:
 
 permissions:
   contents: read
-  id-token: write   # 必須，否則 OIDC 不會簽 token
+  id-token: write   # 必須，否則 OIDC 不會簽發 token
 
 jobs:
-  deploy:
-    if: github.ref == 'refs/heads/main'
-    needs: test
+  deploy:                 # job 名稱
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
-      # 1) OIDC → WIF 取得 ADC（不要加 lifetime）
-      - id: auth
+      - id: auth          # 這是 step，不是 job
         uses: google-github-actions/auth@v2
         with:
           workload_identity_provider: ${{ secrets.GCP_WIF_PROVIDER }}
           service_account: ${{ secrets.GCP_SA_EMAIL }}
-          # audience: 可省略，除非你 provider 做了自訂 audience
 
       - uses: actions/setup-node@v4
         with:
@@ -32,25 +28,16 @@ jobs:
           cache: 'npm'
       - run: npm ci
 
-      # 2) 寫入 .clasp.json（若你的 manifest 在 src/，rootDir 改成 "src"）
       - name: Write .clasp.json
         run: |
-          cat > .clasp.json <<'JSON'
-          { "scriptId": "${{ secrets.SCRIPT_ID }}", "rootDir": "." }
-          JSON
-          echo "[debug] .clasp.json:" && cat .clasp.json
+          echo '{ "scriptId": "${{ secrets.SCRIPT_ID }}", "rootDir": "." }' > .clasp.json
+          cat .clasp.json
 
-      # 3) 診斷：確認 ADC 已注入
       - name: Debug ADC env
-        shell: bash
         run: |
           echo "GOOGLE_APPLICATION_CREDENTIALS=$GOOGLE_APPLICATION_CREDENTIALS"
-          echo "GOOGLE_GHA_CREDS_PATH=$GOOGLE_GHA_CREDS_PATH"
-          echo "CLOUDSDK_AUTH_CREDENTIAL_FILE_OVERRIDE=$CLOUDSDK_AUTH_CREDENTIAL_FILE_OVERRIDE"
-          test -f "$GOOGLE_APPLICATION_CREDENTIALS" && echo "GAC file exists" || (echo "GAC file missing"; exit 1)
-          test -f "$GOOGLE_GHA_CREDS_PATH" && echo "GHA creds file exists" || echo "GHA creds file not found"
+          test -f "$GOOGLE_APPLICATION_CREDENTIALS" && echo "file exists"
 
-      # 4) 用 Clasp 3.x 的 --adc 部署（alpha 版可用；若抓不到可以退回 ^2 測試 push）
       - name: Push & Deploy via ADC
         run: |
           npx -y @google/clasp@3.0.6-alpha push --adc --force
