--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 permissions:
   contents: read
-  id-token: write   # 必須：讓 GitHub 簽發 OIDC Token 給 auth@v2
+  id-token: write
 
 jobs:
   deploy:
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # 1) OIDC → WIF → 取得 ADC（不需要 lifetime）
+      # 1) OIDC → WIF → 取得 ADC
       - id: auth
         uses: google-github-actions/auth@v2
         with:
@@ -29,116 +29,85 @@ jobs:
           cache: 'npm'
       - run: npm ci
 
-      # 2) 診斷：確認 ADC 憑證檔被匯出
+      # 2) 安全檢查 Secrets（只檢查形狀，值會被遮罩）
+      - name: Sanity check secrets (safe)
+        shell: bash
+        run: |
+          WIF='${{ secrets.GCP_WIF_PROVIDER }}'; SA='${{ secrets.GCP_SA_EMAIL }}'; SID='${{ secrets.SCRIPT_ID }}'
+          echo "WIF len=${#WIF}"; [[ "$WIF" =~ ^projects/[0-9]+/locations/global/workloadIdentityPools/.+/providers/.+$ ]] && echo OK || (echo BAD; exit 1)
+          echo "SA len=${#SA}"; [[ "$SA" =~ @.*gserviceaccount\.com$ ]] && echo OK || (echo BAD; exit 1)
+          echo "SID len=${#SID}"; [[ "$SID" =~ ^[A-Za-z0-9_-]+$ ]] && echo OK || (echo BAD; exit 1)
+
+      # 3) 確認 ADC 憑證檔存在
       - name: Debug ADC env
         shell: bash
         run: |
           echo "GOOGLE_APPLICATION_CREDENTIALS=$GOOGLE_APPLICATION_CREDENTIALS"
-          echo "CLOUDSDK_AUTH_CREDENTIAL_FILE_OVERRIDE=$CLOUDSDK_AUTH_CREDENTIAL_FILE_OVERRIDE"
-          test -f "$GOOGLE_APPLICATION_CREDENTIALS" && echo "ADC file exists" || (echo "ADC file missing"; exit 1)
+          test -f "$GOOGLE_APPLICATION_CREDENTIALS" && echo "ADC file exists" || (echo "ADC missing"; exit 1)
 
-      # 3) 安裝 googleapis 用 ADC 呼叫 Script API
-      - run: npm i googleapis@^126
-
-      # 4) 建立部署腳本（ADC→updateContent→createVersion→createDeployment）
-      - name: Write deploy script
-        run: |
-          cat > gas-deploy.mjs <<'EOS'
-          import fs from 'fs';
-          import path from 'path';
-          import {GoogleAuth} from 'google-auth-library';
-          import {google} from 'googleapis';
-
-          // === 讀 .clasp.json，取得 scriptId 與 rootDir ===
-          const clasp = JSON.parse(fs.readFileSync('.clasp.json','utf8'));
-          const scriptId = (clasp.scriptId || process.env.SCRIPT_ID || '').trim();
-          const rootDir = clasp.rootDir || '.';
-          if (!scriptId) throw new Error('SCRIPT_ID/.clasp.json.scriptId 未設定');
-
-          // === 收集檔案（忽略 .git、.github、node_modules 等）===
-          const IGNORE_DIRS = new Set(['.git','.github','node_modules','.vscode']);
-          const files = [];
-          function walk(dir) {
-            for (const name of fs.readdirSync(dir)) {
-              const p = path.join(dir,name);
-              const rel = path.relative(rootDir, p);
-              // 跳過 rootDir 之外與忽略資料夾
-              if (rel.startsWith('..')) continue;
-              const st = fs.statSync(p);
-              if (st.isDirectory()) {
-                if (IGNORE_DIRS.has(name)) continue;
-                walk(p);
-              } else {
-                // 只處理 .gs/.js/.html 與 manifest
-                if (name === 'appsscript.json' && dir === rootDir) {
-                  const manifest = fs.readFileSync(p,'utf8');
-                  files.push({ name: 'appsscript', type: 'JSON', source: manifest });
-                } else if (/\.(gs|js)$/i.test(name)) {
-                  const src = fs.readFileSync(p,'utf8');
-                  const fname = path.basename(name, path.extname(name));
-                  files.push({ name: fname, type: 'SERVER_JS', source: src });
-                } else if (/\.(html)$/i.test(name)) {
-                  const src = fs.readFileSync(p,'utf8');
-                  const fname = path.basename(name, path.extname(name));
-                  files.push({ name: fname, type: 'HTML', source: src });
-                }
-              }
-            }
-          }
-          walk(rootDir);
-
-          if (!files.find(f => f.name==='appsscript' && f.type==='JSON'))
-            throw new Error('找不到 appsscript.json（請放在 rootDir 並命名正確）');
-
-          console.log('Collected', files.length, 'files');
-
-          // === 用 ADC 取權限 ===
-          const auth = new GoogleAuth({
-            scopes: [
-              'https://www.googleapis.com/auth/script.projects',
-              'https://www.googleapis.com/auth/script.deployments'
-            ]
-          });
-          const client = await auth.getClient();
-          const script = google.script({version:'v1', auth: client});
-
-          // === 1) updateContent ===
-          await script.projects.updateContent({
-            scriptId,
-            requestBody: { files }
-          });
-          console.log('updateContent OK');
-
-          // === 2) createVersion ===
-          const desc = process.env.VERSION_DESC || `CI ${new Date().toISOString()}`;
-          const ver = await script.projects.versions.create({
-            scriptId,
-            requestBody: { description: desc }
-          });
-          const versionNumber = ver.data?.versionNumber;
-          console.log('createVersion OK:', versionNumber);
-
-          // === 3) createDeployment ===
-          await script.projects.deployments.create({
-            scriptId,
-            requestBody: {
-              versionNumber,
-              manifestFileName: 'appsscript',
-              description: process.env.DEPLOY_DESC || desc
-            }
-          });
-          console.log('createDeployment OK');
-          EOS
-
-      # 5) 寫入 .clasp.json（rootDir 指向 manifest 所在位置：此範例為根目錄）
+      # 4) 寫入 .clasp.json（rootDir="."）
       - name: Write .clasp.json
         run: |
           echo '{ "scriptId": "${{ secrets.SCRIPT_ID }}", "rootDir": "." }' > .clasp.json
-          cat .clasp.json
+          echo "[debug] .clasp.json:" && cat .clasp.json
 
-      # 6) 以 ADC 執行部署腳本
-      - name: Run deploy script (ADC)
+      # 5) 安裝 googleapis，並以 ADC 直接呼叫 Apps Script API 部署
+      - run: npm i googleapis@^126
+
+      - name: Deploy via Script API (ADC)
         env:
           VERSION_DESC: "CI $(date -u +'%Y-%m-%dT%H:%M:%SZ')"
           DEPLOY_DESC:  "CI auto deploy $(date -u +'%Y-%m-%dT%H:%M:%SZ')"
-        run: node gas-deploy.mjs
+        run: |
+          node - <<'EOS'
+          const fs = require('fs');
+          const path = require('path');
+          const {GoogleAuth} = require('google-auth-library');
+          const {google} = require('googleapis');
+          // 讀取 .clasp.json
+          const conf = JSON.parse(fs.readFileSync('.clasp.json','utf8'));
+          const scriptId = (conf.scriptId || process.env.SCRIPT_ID || '').trim();
+          const rootDir = conf.rootDir || '.';
+          if (!scriptId) throw new Error('SCRIPT_ID 未設定');
+          // 收集檔案
+          const IGN = new Set(['.git','.github','node_modules','.vscode','docs']);
+          const files = [];
+          const walk = d => fs.readdirSync(d).forEach(n=>{
+            const p = path.join(d,n); const rel = path.relative(rootDir,p);
+            if (rel.startsWith('..')) return;
+            const st=fs.statSync(p);
+            if (st.isDirectory()) { if (!IGN.has(n)) walk(p); }
+            else {
+              if (n==='appsscript.json' && d===rootDir)
+                files.push({name:'appsscript',type:'JSON',source:fs.readFileSync(p,'utf8')});
+              else if (/\.(gs|js)$/i.test(n))
+                files.push({name:path.basename(n,path.extname(n)),type:'SERVER_JS',source:fs.readFileSync(p,'utf8')});
+              else if (/\.html$/i.test(n))
+                files.push({name:path.basename(n,path.extname(n)),type:'HTML',source:fs.readFileSync(p,'utf8')});
+            }
+          });
+          walk(rootDir);
+          if (!files.find(f=>f.name==='appsscript'&&f.type==='JSON'))
+            throw new Error('找不到 appsscript.json（請放在 rootDir 並命名正確）');
+          console.log('Collected', files.length, 'files');
+
+          // 以 ADC 取得權限
+          const auth = new GoogleAuth({
+            scopes: ['https://www.googleapis.com/auth/script.projects',
+                     'https://www.googleapis.com/auth/script.deployments']
+          });
+          (async () => {
+            const client = await auth.getClient();
+            const script = google.script({version:'v1', auth: client});
+            await script.projects.updateContent({scriptId, requestBody:{files}});
+            console.log('updateContent OK');
+            const desc = process.env.VERSION_DESC || `CI ${new Date().toISOString()}`;
+            const ver = await script.projects.versions.create({scriptId, requestBody:{description:desc}});
+            const versionNumber = ver.data?.versionNumber;
+            console.log('createVersion OK:', versionNumber);
+            await script.projects.deployments.create({scriptId, requestBody:{
+              versionNumber, manifestFileName:'appsscript', description: process.env.DEPLOY_DESC || desc
+            }});
+            console.log('createDeployment OK');
+          })().catch(e=>{ console.error('DEPLOY ERR:', e.response?.data||e); process.exit(1); });
+          EOS
