--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "aa01",
+  "name": "gas-webapp",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "devDependencies": {
     "@google/clasp": "^2.5.0"
   },
   "scripts": {
     "test": "echo \"no tests yet\"",
     "deploy:web": "node gas-deploy.mjs",
-    "oauth:token": "node get-refresh-token.mjs"
+    "oauth:token": "node get-refresh-token.mjs",
+    "gas:push": "clasp push --force",
+    "gas:version": "node ./scripts/gas-version.js",
+    "gas:deploy": "node ./scripts/gas-deploy.js",
+    "gas:release": "npm run gas:push && npm run gas:version && npm run gas:deploy"
   }
 }
